log
Wed 15 May 2024 06:12:58 PM UTC: 
 tests:  0|5
total_score: 0/70
ab3fe75
Wed 15 May 2024 09:56:57 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  1|5
total_score: 5/70
20874da
Wed 15 May 2024 09:58:09 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|4
total_score: 15/70
4e22a84
Wed 15 May 2024 10:20:11 PM UTC: 
 sudoku.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
 tests:  2|4
total_score: 15/70
a0437c7
Wed 15 May 2024 11:00:13 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
test.c: In function ‘main’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0cc5628
Thu 16 May 2024 03:20:42 PM UTC: 
 sudoku.c | 54 ++++++++++++++----------------------------------------
 1 file changed, 14 insertions(+), 40 deletions(-)
 tests:  2|4
total_score: 15/70
d4102bb
Thu 16 May 2024 03:28:07 PM UTC: 
 sudoku.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  2|4
total_score: 15/70
783fc1b
Thu 16 May 2024 03:41:25 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  2|4
total_score: 15/70
8214f03
Thu 16 May 2024 03:41:47 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
e888d0e
Thu 16 May 2024 03:55:01 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:55:14: error: ‘num’ undeclared (first use in this function)
   55 |          if (num != 0) {
      |              ^~~
sudoku.c:55:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3e0816e
Thu 16 May 2024 03:55:17 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
08ca6d3
Thu 16 May 2024 04:03:34 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|2
total_score: 45/70
a88f923
Thu 16 May 2024 04:06:49 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
c5319e8
